# mneme

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  db.rs  embed.rs  ingest.rs  lib.rs  main.rs  search.rs  types.rs
